# openMASTER

./: .gitattributes  .gitignore  Model_v1.drawio  README.md  Results_CE.xlsx  Results_CO2.xlsx  Results_Correl.xlsx  Results_PE.xlsx  Results_ST.xlsx  Results_TE.xlsx  config.yaml  lfs_files.txt  openMASTER_arch.vsdx  pyproject.toml  requirements.txt
Charts/: piechart.py  sankey.py  sankey_data.json  scenario_charts.ipynb  scenario_sankey.ipynb
Charts/charts/: areachart.py  barchart.py
Dashboard/app/: index.py
data/input/: 80B60C30  Balance Energetico España definitivo 2022.xlsx  JUST_openMASTER_Data.xlsx  SD.xlsx  SD_2070.xlsx  covar.xlsx  input_om.xlsx  input_om_v1.xlsx  input_om_v2.xlsx  mean.csv  openMASTER_Data.xlsx  openMASTER_Data_2050.xlsx  openMASTER_Data_2070.xlsx  openMASTER_Data_ResMod.xlsm  openMASTER_Data_ResMod_CCAA.xlsm  openMASTER_Data__.xlsm  openMASTER_Data__.xlsx  openMASTER_Data_efficiency_deciles.xlsm
data/output/: extended_scenarios_table.csv  model_results.csv  scenarios_results.csv  scenarios_results_full.csv  scenarios_results_full.xlsx  scenarios_table.csv
docs/: openMASTER_arch.vsdx
notebooks/: Results_FastAnalysis.ipynb  correlation_openMASTER.ipynb  decision_tree  duals_EQ_TEBalance.csv  model.ilp  output.csv  quickstart_openMASTER.ipynb  quickstart_openMASTER_FIGURAS.ipynb  quickstart_scenarios_from_results.ipynb  results_SD.csv  sankey_data.json  scenario_sankey.ipynb  scenarios_from_results.ipynb  tree.dot
scenarios/: scenarios_index.csv
src/: data_upload.py  openMASTER.ipynb  output_data.py  scenario_sankey.ipynb
src/openMASTER/: const.py  data_upload.py  loader.py  (+2 more)
(+375 files in other folders)
